2.4.1 dev
- Added 'is' and 'has' to the getter analysis.
- Added a event dispatcher.
- Change: Some internal renaming.
- Bugfix: The position of the search field of the hans skin is now
  calculated correct when the viewport is not on top.
- Bugfix: The scroll container detection of the hans skin works
  now.
- Bugfix: Added help text for the arrayCountLimit.
- Bugfix: "Resolving" of unresolvable inherited comment parts work
  now as expected.
- Bugfix: Prevent the registering of multiple fatal error handlers.
- Bugfix: Minimise interference with strange CSS styles.
- Bugfix: Do not render an unresolvable method analysis recursion
  when there are no methods to analyse in that specific class.

2.4.0
- Added the method analysis to the recursion detection, to prevent
  analysing the same methods over and over again.
- Added Javascript optimisation for very large output.
- Added mimetype analysis for strings.
- Added prosessing class for "other" variable types.
- Added info button to the hans skin, to replace the somewhat
  intrusive hover info.
- Change: Moved the overwrites from the GLOBALS to a static class
- Change: Prettified the display of sourcecode in the backtrace in
  the smoky grey skin.
- Change: Removed the option for the atomatic registration of the
  fatal error handler.
- Change: Lots of micro optimizations.
- Bugfix: Minimise CSS interference from the hosting cms with
  marked text.
- Change: Simplified array analysis is now configurable.
- Change: Renamed the 'Backtrace' config group to 'pruneOutput'.
- Bugfix: Disabling via sourcecode works again.
- Bugfix: Removed the special backtrace configuration, which
  resulted in a output overkill, crashing the backtrace.
- Bugfix: Removed the comma in the method parameter analysis.
- Bugfix: Fixed in issue, where the correct nesting level was not
  set correctly, resulting in output overkill.
- Bugfix: Fixed codewrapper2 for the code generation in the Hans
  skin.