@@ -166,8 +166,6 @@ class Pool extends Factory
      */
     public function init()
     {
-        // Get the rewrites from the rewrite class.
-        $this->flushRewrite();
         // Initialize the encoding service.
         $this->encodingService = $this->createClass('Brainworxx\\Krexx\\Service\\Misc\\Encoding');
         // Initializes the file service.
