@@ -1,60 +1,0 @@
-<?php
-/**
- * kreXX: Krumo eXXtended
- *
- * kreXX is a debugging tool, which displays structured information
- * about any PHP object. It is a nice replacement for print_r() or var_dump()
- * which are used by a lot of PHP developers.
- *
- * kreXX is a fork of Krumo, which was originally written by:
- * Kaloyan K. Tsvetkov <kaloyan@kaloyan.info>
- *
- * @author
- *   brainworXX GmbH <info@brainworxx.de>
- *
- * @license
- *   http://opensource.org/licenses/LGPL-2.1
- *
- *   GNU Lesser General Public License Version 2.1
- *
- *   kreXX Copyright (C) 2014-2018 Brainworxx GmbH
- *
- *   This library is free software; you can redistribute it and/or modify it
- *   under the terms of the GNU Lesser General Public License as published by
- *   the Free Software Foundation; either version 2.1 of the License, or (at
- *   your option) any later version.
- *   This library is distributed in the hope that it will be useful, but WITHOUT
- *   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- *   FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License
- *   for more details.
- *   You should have received a copy of the GNU Lesser General Public License
- *   along with this library; if not, write to the Free Software Foundation,
- *   Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
- */
-
-namespace Brainworxx\Krexx\Service;
-
-/**
- * Storing overwrites for the factory or the configuration.
- *
- * @package Brainworxx\Krexx\Service
- */
-class Overwrites
-{
-    /**
-     * Storing the global overwrites here. These will not get flushed.
-     *
-     * @var array
-     */
-    public static $classes = array();
-
-    /**
-     * Overwriting the path to the following folders:
-     * - chunks
-     * - config
-     * - log
-     *
-     * @var array
-     */
-    public static $directories = array();
-}
