@@ -1,5 +1,7 @@
 2.4.1 dev
 - Added 'is' and 'has' to the getter analysis.
+- Added half-asses plugin support, to replace the half-asses
+  overwrites
 - Added a event dispatcher.
 - Change: Some internal renaming.
 - Bugfix: The position of the search field of the hans skin is now
